--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,4 @@
 VITE_API_URL=https://support-app-1-m6kf.onrender.com
+
+RAZORPAY_KEY_ID= rzp_test_RHNt2Iyu7XSC0C
+RAZORPAY_KEY_SECRET= oO3xJc68fK3CpLe2W8FhoPCW
