Update project code

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,5 @@
 VITE_API_URL=https://support-app-1-m6kf.onrender.com
 UPLOAD_DIR=./uploads
 MAX_FILE_SIZE=4294967296
+
+VITE_PAYPAL_CLIENT_ID=AQG_pPxSUABGdyFrkgPkDXYkFIasjlkDEZ7V-Lbpbx_D3NCYAv1j4D6cAQFDp7UcGAGltNRJ8U7nDBjo
